--- a/index.html
+++ b/index.html
@@ -4,108 +4,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>PUSH - Skate & Downhill</title>
+    <title>SPOTS</title>
+    <script>
+        window.process = { env: { NODE_ENV: 'development' } };
+        window.onerror = function(msg, url, line, col, error) {
+            console.error('Global Error:', { msg, url, line, col, error });
+            return false; 
+        };
+    </script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=VT323&family=Archivo+Black&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
     
     <style>
-        :root { --sat: env(safe-area-inset-top); --sab: env(safe-area-inset-bottom); }
-        html, body { height: 100%; font-family: 'Inter', sans-serif; background-color: #000; overflow: hidden; color: #f8fafc; }
-        #root { height: 100%; display: flex; flex-direction: column; }
-        .hide-scrollbar::-webkit-scrollbar { display: none; }
+        :root { 
+            --sat: env(safe-area-inset-top); 
+            --sab: env(safe-area-inset-bottom);
+        }
         
-        /* --- HIGH FIDELITY BAUHAUS WIN98 RETRO MODE OVERRIDES --- */
-        .retro-mode {
-            --r-teal: #008080;
-            --r-yellow: #ffd700;
-            --r-grey: #c0c0c0;
-            --r-black: #000000;
-            background-color: var(--r-teal) !important;
-            image-rendering: pixelated;
+        html, body { 
+            height: 100%; 
+            font-family: 'Inter', sans-serif; 
+            background-color: #000000; 
+            color: #f8fafc;
+            overflow: hidden;
         }
 
-        /* Bauhaus Card Transformation */
-        .retro-mode .bg-slate-900, 
-        .retro-mode .bg-slate-800, 
-        .retro-mode .bg-black,
-        .retro-mode .rounded-3xl,
-        .retro-mode .rounded-2xl {
-            background-color: #fff !important;
-            border: 4px solid var(--r-black) !important;
-            border-radius: 0px !important;
-            box-shadow: 10px 10px 0px var(--r-black) !important;
-            padding-top: 40px !important;
-            position: relative;
-            margin-bottom: 24px !important;
+        /* CUSTOM SCROLLBAR */
+        .hide-scrollbar::-webkit-scrollbar { display: none; }
+        .hide-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
+
+        /* MAP OVERRIDES */
+        .leaflet-container {
+            background-color: #09090b !important;
+            font-family: 'Inter', sans-serif;
         }
 
-        /* Title Bars */
-        .retro-mode section.bg-slate-900::before,
-        .retro-mode div.bg-slate-900::before,
-        .retro-mode .win-window::before {
-            content: '● ■ ▲  SYSTEM_ACTIVE';
-            position: absolute; top: 0; left: 0; right: 0; height: 36px;
-            background: var(--r-black); color: var(--r-yellow);
-            display: flex; align-items: center; padding-left: 12px;
-            font-family: 'Space Mono', monospace; font-weight: 900; font-size: 14px; z-index: 10;
+        /* ANIMATIONS */
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        .animate-view {
+            animation: fadeIn 0.4s cubic-bezier(0.16, 1, 0.3, 1);
         }
 
-        /* Typography */
-        .retro-mode h1, .retro-mode h2, .retro-mode h3 {
-            font-family: 'Archivo Black', sans-serif !important;
-            text-transform: uppercase; color: var(--r-black) !important;
-            letter-spacing: -2px !important; line-height: 0.8 !important;
+        /* SLOW BREATHING ANIMATION FOR MARKERS */
+        @keyframes breathe {
+            0% { transform: scale(1); opacity: 0.6; }
+            50% { transform: scale(1.8); opacity: 0; }
+            100% { transform: scale(1); opacity: 0.6; }
         }
-        .retro-mode p, .retro-mode span, .retro-mode button, .retro-mode input {
-            font-family: 'VT323', monospace !important; font-size: 1.5rem !important; color: var(--r-black) !important;
-        }
-
-        /* Navigation Taskbar */
-        .retro-mode nav {
-            background-color: var(--r-grey) !important;
-            border-top: 4px solid var(--r-black) !important;
-            height: 80px !important; border-radius: 0px !important;
-            backdrop-filter: none !important;
-        }
-        .retro-mode nav button {
-            border: 3px solid !important; border-color: #fff #555 #555 #fff !important;
-            background: var(--r-grey) !important; border-radius: 0px !important;
-        }
-        .retro-mode nav .text-indigo-400 {
-            background-color: var(--r-yellow) !important;
-            border-color: #555 #fff #fff #555 !important;
-        }
-
-        /* Map UI Fix - Optimized for performance (Removed Heavy Filters) */
-        .retro-mode .leaflet-container {
-            border: 4px solid var(--r-black) !important;
-            background-color: #fff !important;
-        }
-
-        /* Images - Optimized for performance (Removed Mix-Blend-Mode) */
-        .retro-mode img {
-            border: 4px solid var(--r-black) !important;
-            opacity: 0.9;
-        }
-
-        /* Buttons */
-        .retro-mode button:not(nav button) {
-            background-color: var(--r-yellow) !important;
-            border: 4px solid var(--r-black) !important;
-            box-shadow: 6px 6px 0px var(--r-black) !important;
-            text-transform: uppercase; font-weight: 900 !important;
-            border-radius: 0px !important;
-        }
-        .retro-mode button:active { transform: translate(4px, 4px); box-shadow: 0px 0px 0px #000 !important; }
-
-        .scanlines {
-            position: fixed; inset: 0;
-            background: linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(0, 0, 0, 0.1) 50%);
-            background-size: 100% 4px; pointer-events: none; z-index: 10002;
+        .animate-breathe {
+            animation: breathe 3s ease-in-out infinite;
         }
     </style>
 
@@ -117,14 +71,15 @@
     "react-dom": "https://esm.sh/react-dom@^19.2.3",
     "react-dom/client": "https://esm.sh/react-dom@^19.2.3/client",
     "@google/genai": "https://esm.sh/@google/genai@^1.37.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0?external=react",
+    "zustand": "https://esm.sh/zustand@4.5.0?external=react",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
 <script type="module" src="index.tsx"></script>
 </head>
-<body class="bg-black text-white selection:bg-indigo-500">
+<body class="bg-black text-white selection:bg-indigo-500 selection:text-white">
     <div id="root"></div>
 </body>
 </html>
