--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             background-color: #000000; 
             color: #f8fafc;
             overflow: hidden;
+            -webkit-tap-highlight-color: transparent;
         }
 
         /* CUSTOM SCROLLBAR */
@@ -42,6 +43,13 @@
             background-color: #09090b !important;
             font-family: 'Inter', sans-serif;
         }
+        
+        /* Remove Leaflet attribution for cleaner UI (Demo purposes) */
+        .leaflet-control-attribution { display: none !important; }
+
+        /* UTILITY CLASSES */
+        .pt-safe-top { padding-top: calc(var(--sat) + 1rem); }
+        .pb-safe-bottom { padding-bottom: calc(var(--sab) + 1rem); }
 
         /* ANIMATIONS */
         @keyframes fadeIn {
@@ -49,17 +57,58 @@
             to { opacity: 1; transform: translateY(0); }
         }
         .animate-view {
-            animation: fadeIn 0.4s cubic-bezier(0.16, 1, 0.3, 1);
+            animation: fadeIn 0.4s cubic-bezier(0.16, 1, 0.3, 1) forwards;
         }
 
-        /* SLOW BREATHING ANIMATION FOR MARKERS */
+        @keyframes enter-sheet { 
+            0% { transform: translateY(100%); opacity: 0; } 
+            100% { transform: translateY(0); opacity: 1; } 
+        }
+        .animate-sheet { 
+            animation: enter-sheet 0.5s cubic-bezier(0.32, 0.72, 0, 1) forwards; 
+        }
+
+        @keyframes enter-modal { 
+            0% { opacity: 0; transform: scale(0.96) translateY(8px); } 
+            100% { opacity: 1; transform: scale(1) translateY(0); } 
+        }
+        .animate-modal { 
+            animation: enter-modal 0.3s cubic-bezier(0.16, 1, 0.3, 1) forwards; 
+        }
+
+        @keyframes enter-pop { 
+            0% { opacity: 0; transform: scale(0.9) translateY(20px); } 
+            100% { opacity: 1; transform: scale(1) translateY(0); } 
+        }
+        .animate-pop { 
+            animation: enter-pop 0.3s cubic-bezier(0.34, 1.56, 0.64, 1) forwards; 
+        }
+
+        /* BREATHE ANIMATIONS */
+        @keyframes breathe-out { 
+            0% { transform: scale(1); opacity: 0.6; } 
+            100% { transform: scale(2.2); opacity: 0; } 
+        }
+        .animate-breathe-out { 
+            animation: breathe-out 2s ease-out infinite; 
+        }
+
         @keyframes breathe {
             0% { transform: scale(1); opacity: 0.6; }
-            50% { transform: scale(1.8); opacity: 0; }
+            50% { transform: scale(1.1); opacity: 0.8; }
             100% { transform: scale(1); opacity: 0.6; }
         }
         .animate-breathe {
             animation: breathe 3s ease-in-out infinite;
+        }
+        
+        /* SCANLINE EFFECT */
+        @keyframes scan {
+            0% { transform: translateY(-100%); }
+            100% { transform: translateY(100%); }
+        }
+        .animate-scan {
+            animation: scan 3s linear infinite;
         }
     </style>
 
